syntax = "proto3";

package events;


enum InstructionType {
  PlayDialog = 0;
  ShowDecision = 1;
  PlayBgm = 2;
  PlaySe = 3;
  SetBgImg = 4;
  SetCharaImg = 5;
  SleepOrFade = 6;
  TransitionToGraphics = 7;
  TransitionToGraphicsFade = 8;
  ShowCg = 9;
  FadeSystemToBlack = 10;
  SetGraphicsState = 11;
  ToggleGraphicsFlag = 12;
  ShakeScreen = 13;
  ToggleStaffState = 14;
  ShowStaffA = 15;
  ShowStaffB = 16;
}


message Instruction {
  InstructionType type = 1;
  repeated int32 params = 2;
  repeated string string_params=3; // ['s{strin_index}', ...] or ['{int_flag}', ...]
}


message EventMapping {
  int32 evId = 1;
  bool flag1 = 2;
  string evFunc = 3;
  repeated Instruction instructions = 4;
  repeated int32 return_values = 5;
  bool has_choices = 6;
  repeated int32 from_events = 7;
}


message EventMappings {
  repeated string text_pool = 1;
  repeated EventMapping events = 2;
}

